--- a/interface/my-app/src/pages/SongDetailsPage.css
+++ b/interface/my-app/src/pages/SongDetailsPage.css
@@ -40,19 +40,16 @@
   }
   
   .recommended-tracks {
-    list-style: none;
-    padding: 0;
-    margin: 0;
   }
   
   .recommended-tracks li {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 20px;
-    padding: 10px;
     background-color: #fff;
     border-radius: 8px;
+    padding: 0;
+    padding-bottom: 0;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s;
   }
@@ -62,7 +59,6 @@
   }
   
   .recommended-tracks li p {
-    margin-top: 10px;
     color: #333;
     text-align: center;
   }
@@ -81,5 +77,28 @@
       margin-bottom: 10px;
     }
   }
+
+.audiofeats-div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px 0;
+}
+.h2-div {
+  width: 641px;
+}
+.audiofeats-table {
+  margin-bottom: 20px;
+  width: 640px;
+  font-family: Arial, sans-serif;
+}
+.audiofeats-table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+  padding: 10px;
+  vertical-align: middle;
+  text-align: center;
+}
+
 
 
